fix: adjust spacing in narratives (resolves #157) (#171)
* fix: adjust spacing in narratives

* fix: update graphics for narrative journey maps

--- a/src/assets/styles/all.css
+++ b/src/assets/styles/all.css
@@ -647,7 +647,7 @@ a:visited {
     font-weight: var(--fi-font-weight-semibold);
     line-height: 1.2;
     max-width: 22.5rem;
-    padding: var(--fi-space-l);
+    padding: var(--fi-space-s);
 }
 
 .card h5 {
